trunk/Archive2/1d/98bf5d6e3992b4/output
main.cpp: In function 'void split_into_sorted_parts(const std::vector<std::basic_string<char> >&, std::vector<std::basic_string<char> >&, size_t)':
main.cpp:63:17: error: 'process' was not declared in this scope
         process(); // optimize to keep inmemory?
                 ^
